added reset capability through API
